# synthetic-join-datagen

./: .gitignore  CITATION.cff  LICENSE  README.md  analysis_module.py  data_generation.py  example_config.toml  main.py  plan_generation.py  pyproject.toml  registries.py  requirements.txt  setup.py  small_test_config.toml  test_config.toml
generated_output_dask/: analysis_plan_0_random_attribute.txt  analysis_plan_0_random_table.txt  analysis_plan_1_random_attribute.txt  analysis_plan_1_random_table.txt  analysis_plan_2_star_attribute.txt  analysis_plan_2_star_table.txt  analysis_plan_3_star_attribute.txt  analysis_plan_3_star_table.txt  selectivity_analysis_data.json  selectivity_analysis_report.txt
generated_output_dask/data/: R0.csv  R1.csv  R2.csv
generated_output_dask/plans/: plan_0_random_attribute.txt  plan_0_random_table.txt  plan_1_random_attribute.txt  plan_1_random_table.txt  plan_2_star_attribute.txt  plan_2_star_table.txt  plan_3_star_attribute.txt  plan_3_star_table.txt
src/: analysis_module.py  cli.py  data_generation.py  main.py  plan_generation.py  plan_structures.py  registries.py
